
syntax = "proto3";

service TasksController {
    rpc createTask (Task) returns (Task);
    rpc listTasks (Paginated) returns (ListOfTasks);
    rpc getTaskById (TaskId) returns (Task);
    rpc markTaskAsDone (TaskId) returns (Task);
}

message Empty {}

message Task {
    optional string id = 1;
    required string description = 2;
    optional bool done = 3;
    required string reporter = 4;
    required string name = 5;
}

message TaskId {
    string id = 1;
}

message Paginated {
    optional int32 page = 1;
    optional int32 limit = 2;
}

message ListOfTasks {
    repeated Task tasks = 1;
}
